Add Preview Site Page Feature

--- a/SitecoreExtension.SeoUrl/App_Config/SeoUrlsProcessors.config
+++ b/SitecoreExtension.SeoUrl/App_Config/SeoUrlsProcessors.config
@@ -16,5 +16,8 @@
       <setting name="rewriteRules" value="/sitecore/system/Modules/SEO URLs/URL Routing/Rewrite Rules"/>
       <setting name ="linkSettingsRules" value="/sitecore/system/Modules/SEO URLs/URL Routing/Link Settings Rules"/>
     </settings>
+    <commands>
+      <command name="item:previewsite" type="SitecoreExtension.SeoUrl.Command.PreviewExtensionCommand,SitecoreExtension.SeoUrl" />
+    </commands>
   </sitecore>
 </configuration>
